# CaseByCase

./: .gitignore  LICENCE  README.md  main.py  map.py  pyproject.toml  requirements.txt  settings.py
.github/workflows/: ci-actions.yaml
game/: grid.py  player.py
tests/: test_grid.py  test_player.py
