[project]
name = "CaseByCase"
version = "0.1.0"
description = "A python game where you play a pixel detective."
authors = [{ name = "Lucas Debeve", email = "lucas.debeve2003@gmail.com" }]
readme = "README.md"
requires-python = ">=3.10"

[tool.ruff]
line-length = 79

[tool.ruff.lint]
extend-select = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "tab"
docstring-code-format = true